# SealSounds

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: .htaccess  app.js  config.example.js  index.html  structure.test.js  styles.css
ui/core/: controls.js  facts.js  images.js  player.js  search.js  tracklist.js  tracklist.test.js  utils.js  utils.test.js  viz-manager.js
ui/plugins/: plugin-loader.js
ui/plugins/ambient/: index.js
ui/plugins/aurora/: index.js
ui/plugins/butterflies/: index.js
ui/plugins/clouds/: index.js
ui/plugins/highland/: index.js
ui/plugins/mandelbrot/: index.js
ui/plugins/rainforest/: index.js
ui/plugins/spectrum/: index.js
ui/plugins/starfield/: index.js
ui/plugins/vu-meters/: index.js
