[package]
name = "seal-sounds"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
